# embedded

./: CMakeLists.txt  barectf-bitfield.h  barectf-platform-linux-fs.c  barectf.c  barectf.h  config.yaml  example  example.c  run.sh  stream
trace/: metadata  stream
zeromq/: CMakeLists.txt  hw_interface.c  onlie_analysis.py  test.c  zmq_api.c  zmq_api.h
